Updating various files to fix linting issues.

--- a/app/spec/commands/chat.yml
+++ b/app/spec/commands/chat.yml
@@ -67,6 +67,7 @@ command:
       parse:
         chat_name:
         listen_timeout:
+        listen_state_key:
     send:
       base: chat
       priority: 800
