--- a/app/spec/users.yml
+++ b/app/spec/users.yml
@@ -1,5 +1,31 @@
+user_defaults_ai:
+  language_provider: litellm
+  language_provider_options:
+    model: openrouter/deepseek/deepseek-r1-0528
+    max_token_percent: 0.3
+
+  text_splitter_provider: spacy
+
+  encoder_provider: deepinfra
+  encoder_provider_options:
+    model: Qwen/Qwen3-Embedding-8B
+
+  search_limit: 1000
+  search_min_score: 0.3
+
 users:
+  admin:
+    defaults: ai
+    groups: [admin]
+
   dsv3:
+    defaults: ai
     groups: [ai-user]
+    language_provider_options:
+      model: openrouter/deepseek/deepseek-v3
+
   dsr1:
+    defaults: ai
     groups: [ai-user]
+    language_provider_options:
+      model: openrouter/deepseek/deepseek-r1-0528
