--- a/app/spec/base/command.yml
+++ b/app/spec/base/command.yml
@@ -80,7 +80,7 @@ command_base:
     groups_allowed: [admin]
     background: true
   chat:
-    mixins: [chat]
+    mixins: [chat, qdrant]
     groups_allowed: [chat-user]
     background: false
   agent:
@@ -93,7 +93,7 @@ command_base:
       - pause
   cell:
     base: agent
-    mixins: [cell, chat, qdrant]
+    mixins: [cell, chat]
     groups_allowed: [admin]
     background: false
     parse:
