--- a/app/spec/commands/chat.yml
+++ b/app/spec/commands/chat.yml
@@ -63,7 +63,6 @@ command:
       base: chat
       priority: 800
       parse:
-        chat_name:
         listen_timeout:
         listen_state_key:
     send:
@@ -71,7 +70,7 @@ command:
       priority: 800
       parse:
         chat_name:
-        chat_message:
+        chat_text:
 
   agent:
     chat:
