--- a/app/spec/users.yml
+++ b/app/spec/users.yml
@@ -13,6 +13,7 @@ user_defaults_ai:
   encoder_provider: deepinfra
   encoder_provider_options:
     model: Qwen/Qwen3-Embedding-8B
+    dimension: 1024
 
   search_limit: 1000
   search_min_score: 0.3
