--- a/app/spec/channels.yml
+++ b/app/spec/channels.yml
@@ -1,3 +1,31 @@
+_encoder_channel_message: &encoder_channel_message
+  type: dict
+  items:
+    user:
+      type: str
+      description: 'The user name of the user making the encoding request'
+      required: true
+    data_type:
+      type: str
+      description: 'The data type name that needs to be encoded'
+      required: true
+    id:
+      type: str
+      description: 'The data instance ID to be encoded'
+      required: true
+    field:
+      type: str
+      description: 'The data instance field to be encoded'
+      required: true
+    collection:
+      type: str
+      description: 'The Qdrant collection to store embeddings'
+      required: true
+    payload:
+      type: dict
+      description: 'The Qdrant collection payload fields and values to store with embeddings'
+      required: false
+
 channels:
   'data:save:{data_type}':
     description: 'This channel receives the newly created ID field values for any defined data {type}'
@@ -49,6 +77,22 @@ channels:
           type: int
           description: 'Number of workers that were actually created for this scaling event'
           required: true
+
+  'encoder:save':
+    description: 'This channel gets notified with requests to generate embeddings using an encoder provider'
+    groups:
+      - ai-user
+      - chat-user
+    message:
+      <<: *encoder_channel_message
+
+  'encoder:complete':
+    description: 'This channel gets notified of encoding task completions by the encoder agents'
+    groups:
+      - ai-user
+      - chat-user
+    message:
+      <<: *encoder_channel_message
 
   'chat:message':
     description: 'This channel receives a sequence of chat messages'
