Renaming the max_token_percent field to output_token_percent in the base language model plugin provider.

--- a/app/spec/plugins/language_model.yml
+++ b/app/spec/plugins/language_model.yml
@@ -22,7 +22,7 @@ plugin:
         type: str
         help: 'Language model name'
     option:
-      max_token_percent:
+      output_token_percent:
         type: float
         help: 'Percentage of total context window allocated to output tokens'
         default: 0.3
