Adding an initial language model agent.

--- a/app/spec/commands/agents.yml
+++ b/app/spec/commands/agents.yml
@@ -13,3 +13,7 @@ command:
       base: agent
       mixins: [qdrant]
       worker_type: encoder
+
+    language_model:
+      base: agent
+      worker_type: language_model
