Adding the Qdrant command mixin to the base cell agent in the base command specifications.

--- a/app/spec/base/command.yml
+++ b/app/spec/base/command.yml
@@ -97,7 +97,7 @@ command_base:
       - pause
   cell:
     base: agent
-    mixins: [cell, chat, language_model]
+    mixins: [cell, chat, qdrant, language_model]
     worker_type: cell
     parse:
       - lifetime
