--- a/app/requirements.server.txt
+++ b/app/requirements.server.txt
@@ -13,6 +13,8 @@ nvidia-ml-py==12.575.51
 docker==7.1.0
 kubernetes==32.0.1
 watchdog==6.0.0
+chromedriver-autoinstaller==0.6.4
+google-api-python-client==2.177.0
 
 # Web server
 gunicorn==23.0.0
@@ -47,6 +49,7 @@ python-magic==0.4.27
 
 # File parsing
 beautifulsoup4==4.13.4
+selenium==4.34.2
 docx2python==3.5.0
 pdf2image==1.17.0
 pdfplumber==0.11.6
