Adding a browser-user user role in the roles specifications.

--- a/app/spec/roles.yml
+++ b/app/spec/roles.yml
@@ -15,3 +15,4 @@ roles:
   data-auditor: Data auditor (viewing privileges over all environment datasets)
   chat-user: Chat server user (create and maintain chats)
   ai-user: AI system user for agents (channel access and default access to MCP commands)
+  browser-user: Chrome browser user
