--- a/env/secret.example
+++ b/env/secret.example
@@ -21,4 +21,11 @@ ZIMAGI_CLIENT_CACHE_LIFETIME=60
 
 # AI
 
+ZIMAGI_HUGGINGFACE_TOKEN=
 OPENROUTER_API_KEY=
+DEEPINFRA_API_KEY=
+
+# Search
+
+ZIMAGI_GOOGLE_SEARCH_ID=
+ZIMAGI_GOOGLE_SEARCH_API_KEY=
